# mcp-lens

./: .gitignore  CONTRIBUTING.md  README.md  example.py  index.html  pyproject.toml  test_prompt.py
assets/: index-DA66-JCl.css  index-Zuv9GMZk.js
mcp_lens/: __init__.py
mcp_lens/core/: instrument.py  state.py
mcp_lens/models/: __init__.py  events.py
mcp_lens/server/: api.py  app.py
mcp_lens/static/: index.html
mcp_lens/static/assets/: index-4iEXIpi_.css  index-8QX0eMW_.js  index-B1btEzL0.js  index-B8f4WayG.js  index-BJgXaRg2.js  index-BMGNuUSK.js  index-BPWVYH32.css  index-BPd_ODup.js  index-BnS1i5GH.css  index-BvnXolPk.js  index-C3FUhvEc.css  index-CAYXvbgG.js  index-CB-w650R.css  index-CDeQaecs.js  index-CT-UXWcr.js  index-Ceob4pSr.css  index-CkKRWjrR.js  index-CsXEBTic.css  index-CvqJ5jaA.js  index-DBxrVRII.js  index-DOEceyNR.css  index-DOPSMusU.css  index-DSntPStT.js  index-DVA-Xi34.css  index-DWnCvwqz.js  index-DY2vaKVL.css  index-DoyzdLxw.js  index-EB7j3xvG.css  index-Gdgho1bI.js  index-IitOnTCK.js  index-LokBuvOc.css  index-Tv6viqyB.css  index-j-R9OurS.css  index-njVlGjub.css  index-sfpjA7Ht.css
mcp_lens/storage/: __init__.py  database.py
showcase/: index.html  package-lock.json  package.json  vite.config.js
showcase/src/: App.jsx  index.css
ui/: index.html  package-lock.json  package.json  vite.config.ts
ui/src/: App.tsx
ui/src/components/: History.tsx  Metrics.tsx  Prompts.tsx  Resources.tsx  Settings.tsx  ToolExplorer.tsx
